--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -11,10 +11,21 @@
         android:layout_height="match_parent"
         android:contentDescription="@string/photo1"
         android:src="@drawable/landingbackground"
-        android:scaleType="centerCrop"
+        android:scaleType="centerCrop" />
 
-        />
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:text="@string/landingText"
+        android:textSize="48sp"
+        android:textColor="#fff"
+        android:background="#3fff"
+        android:layout_marginTop="48dp"
+        android:id="@+id/textView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 
 </RelativeLayout>
