Update activity_landing.xml to add new colors.

--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -19,8 +19,8 @@
         android:textAlignment="center"
         android:text="@string/landingText"
         android:textSize="48sp"
-        android:textColor="#fff"
-        android:background="#3fff"
+        android:textColor="@color/colorIcons"
+        android:background="@color/colorLightBackground"
         android:layout_marginTop="48dp"
         android:id="@+id/textView"
         android:layout_alignParentTop="true"
