Add dark backgrounds to colors.xml.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,9 @@
     <color name="colorIcons">#FFFFFF</color>
     <color name="colorDivider">#BDBDBD</color>
     <color name="colorLightBackground">#55BBDEFB</color>
-    <color name="colorDarkBackground">#551976D2</color>
+    <color name="colorDarkBackground">#771976D2</color>
+    <color name="colorSecondaryDarkBackground">#777C4DFF</color>
+
     <color name="black_overlay">#66000000</color>
 
 </resources>
