--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -28,21 +28,52 @@
         android:layout_alignParentStart="true" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/searchButton"
         android:text="@string/searchButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_above="@+id/loginButton"
         android:layout_centerHorizontal="true" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/loginButton"
         android:text="@string/loginButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="6dp" />
 
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/colorSecondaryDarkBackground"
+        android:textColorHint="@color/colorIcons"
+        android:padding="10dp"
+        android:inputType="number"
+        android:hint="@string/searchZip"
+        android:textAlignment="center"
+        android:layout_above="@+id/searchButton"
+        android:layout_toLeftOf="@+id/editText2"
+        android:layout_toStartOf="@+id/editText2"
+        android:layout_marginRight="30dp"
+        android:layout_marginEnd="30dp" />
+
+    <EditText
+        android:id="@+id/editText2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:hint="@string/searchLanguage"
+        android:background="@color/colorDarkBackground"
+        android:textColorHint="@color/colorIcons"
+        android:padding="10dp"
+        android:textAlignment="center"
+        android:layout_marginRight="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_above="@+id/searchButton"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
