--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -45,7 +45,7 @@
         android:layout_marginBottom="6dp" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/zipEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/colorSecondaryDarkBackground"
@@ -55,13 +55,13 @@
         android:hint="@string/searchZip"
         android:textAlignment="center"
         android:layout_above="@+id/searchButton"
-        android:layout_toLeftOf="@+id/editText2"
-        android:layout_toStartOf="@+id/editText2"
+        android:layout_toLeftOf="@+id/languageEditText"
+        android:layout_toStartOf="@+id/languageEditText"
         android:layout_marginRight="30dp"
         android:layout_marginEnd="30dp" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/languageEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="text"
