--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,34 +7,45 @@
     tools:context="com.mehequanna.gitawesome.LoginActivity">
 
 
+    <Button
+        android:text="@string/signInButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="23dp"
+        android:id="@+id/button"
+        android:layout_below="@+id/passwordEditText"
+        android:layout_centerHorizontal="true" />
+
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="258dp"
-        android:id="@+id/editText" />
+        android:hint="@string/loginPassword"
+        android:id="@+id/passwordEditText"
+        android:layout_marginTop="58dp"
+        android:layout_alignTop="@+id/editText2"
+        android:layout_centerHorizontal="true" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:hint="@string/loginUsername"
         android:ems="10"
-        android:layout_alignBottom="@+id/editText"
-        android:layout_alignLeft="@+id/editText"
-        android:layout_alignStart="@+id/editText"
-        android:layout_marginBottom="69dp"
-        android:id="@+id/editText2" />
+        android:id="@+id/editText2"
+        android:layout_marginTop="228dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignLeft="@+id/passwordEditText"
+        android:layout_alignStart="@+id/passwordEditText" />
 
-    <Button
-        android:text="Button"
+    <TextView
+        android:text="@string/loginHeader"
+        android:textSize="36sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editText"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="51dp"
-        android:id="@+id/button" />
+        android:id="@+id/textView2"
+        android:layout_marginBottom="77dp"
+        android:layout_above="@+id/passwordEditText"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
