--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -30,7 +30,7 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         app:srcCompat="@drawable/dummyprofile"
-        android:id="@+id/imageView"
+        android:id="@+id/profileImageView"
         android:layout_below="@+id/userTextView"
         android:layout_centerHorizontal="true" />
 
@@ -47,7 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/locationTextView"
-        android:layout_below="@+id/imageView"
+        android:layout_below="@+id/profileImageView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="6dp" />
 
