--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -12,6 +12,7 @@
         android:textSize="24sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAlignment="center"
         android:layout_marginTop="15dp"
         android:id="@+id/userTextView"
         android:layout_alignParentTop="true"
@@ -30,13 +31,14 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         app:srcCompat="@drawable/dummyprofile"
+        android:contentDescription="@string/profileImage"
         android:id="@+id/profileImageView"
         android:layout_below="@+id/userTextView"
         android:layout_centerHorizontal="true" />
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="350dp"
+        android:layout_height="250dp"
         android:id="@+id/languageListView"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
