--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -11,7 +11,10 @@
         android:layout_height="match_parent"
         android:contentDescription="@string/photo1"
         android:src="@drawable/landingbackground"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="match_parent"
@@ -27,23 +30,6 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <Button
-        android:id="@+id/searchButton"
-        android:text="@string/searchButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/loginButton"
-        android:layout_centerHorizontal="true" />
-
-    <Button
-        android:id="@+id/loginButton"
-        android:text="@string/loginButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="6dp" />
-
     <EditText
         android:id="@+id/zipEditText"
         android:layout_width="wrap_content"
@@ -54,11 +40,12 @@
         android:inputType="number"
         android:hint="@string/searchZip"
         android:textAlignment="center"
-        android:layout_above="@+id/searchButton"
-        android:layout_toLeftOf="@+id/languageEditText"
-        android:layout_toStartOf="@+id/languageEditText"
-        android:layout_marginRight="30dp"
-        android:layout_marginEnd="30dp" />
+        android:layout_marginLeft="25dp"
+        android:layout_marginStart="25dp"
+        android:layout_alignBaseline="@+id/languageEditText"
+        android:layout_alignBottom="@+id/languageEditText"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <EditText
         android:id="@+id/languageEditText"
@@ -70,10 +57,54 @@
         android:textColorHint="@color/colorIcons"
         android:padding="10dp"
         android:textAlignment="center"
-        android:layout_marginRight="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_above="@+id/searchButton"
+        android:layout_marginRight="14dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginBottom="11dp"
+        android:layout_above="@+id/searchGitButton"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
+
+    <Button
+        android:id="@+id/searchGitButton"
+        android:text="@string/searchGitButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/loginButton"
+        android:layout_alignRight="@+id/languageEditText"
+        android:layout_alignEnd="@+id/languageEditText"
+        android:layout_marginRight="48dp"
+        android:layout_marginEnd="48dp" />
+
+    <Button
+        android:id="@+id/loginButton"
+        android:text="@string/loginButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignLeft="@+id/searchGitButton"
+        android:layout_alignStart="@+id/searchGitButton"
+        android:layout_alignRight="@+id/searchGitButton"
+        android:layout_alignEnd="@+id/searchGitButton" />
+
+    <Button
+        android:text="@string/searchMeetupButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/searchMeetupButton"
+        android:layout_below="@+id/languageEditText"
+        android:layout_alignLeft="@+id/zipEditText"
+        android:layout_alignStart="@+id/zipEditText" />
+
+    <Button
+        android:text="@string/aboutButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/aboutButton"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/zipEditText"
+        android:layout_alignEnd="@+id/zipEditText"
+        android:layout_marginRight="20dp"
+        android:layout_marginEnd="20dp" />
+
 
 </RelativeLayout>
