Add recycler view in gitsActivity.

--- a/app/src/main/res/layout/activity_gits.xml
+++ b/app/src/main/res/layout/activity_gits.xml
@@ -6,13 +6,9 @@
     android:layout_height="match_parent"
     tools:context="com.mehequanna.gitawesome.ui.GitsActivity">
 
-    <TextView
-        android:text="TextView"
-        android:textSize="24dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="52dp"
-        android:id="@+id/textView2" />
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/gitsRecyclerView"/>
+
 </RelativeLayout>
