--- a/app/src/main/res/layout/gits_list_item.xml
+++ b/app/src/main/res/layout/gits_list_item.xml
@@ -8,13 +8,14 @@
         android:layout_width="130dp"
         android:layout_height="100dp"
         android:id="@+id/reposImageView"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop"
+        android:layout_gravity="center"/>
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:background="#ffffff"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:padding="10dp">
 
         <TextView
