Fix minor naming issue in Login and Create Account Activities.

--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:background="@android:color/white"
             android:hint="@string/name"
-            android:nextFocusDown="@+id/passwordEditText"
+            android:nextFocusDown="@+id/usernameEditText"
             android:padding="10dp"
             android:layout_marginBottom="10dp"
             android:textColor="@android:color/black"
@@ -35,7 +35,7 @@
             android:layout_height="wrap_content"
             android:background="@android:color/white"
             android:hint="@string/github_username"
-            android:nextFocusDown="@+id/passwordEditText"
+            android:nextFocusDown="@+id/zipEditText"
             android:padding="10dp"
             android:layout_marginBottom="10dp"
             android:textColor="@android:color/black"
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:background="@android:color/white"
             android:hint="@string/zip_code"
-            android:nextFocusDown="@+id/passwordEditText"
+            android:nextFocusDown="@+id/emailEditText"
             android:padding="10dp"
             android:layout_marginBottom="10dp"
             android:textColor="@android:color/black"
