--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -7,13 +7,52 @@
     android:layout_height="match_parent"
     tools:context="com.mehequanna.gitawesome.ui.UserActivity">
 
+    <Button
+        android:text="Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="11dp"
+        android:id="@+id/button2" />
+
+    <Button
+        android:text="Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:id="@+id/button"
+        android:layout_alignParentBottom="true"
+        android:layout_alignLeft="@+id/button2"
+        android:layout_alignStart="@+id/button2" />
+
+    <Button
+        android:text="Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button2"
+        android:layout_toLeftOf="@+id/profileImageView"
+        android:layout_toStartOf="@+id/profileImageView"
+        android:layout_marginRight="17dp"
+        android:layout_marginEnd="17dp"
+        android:id="@+id/button3" />
+
+    <Button
+        android:text="Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/button3"
+        android:layout_toRightOf="@+id/userTextView"
+        android:layout_toEndOf="@+id/userTextView"
+        android:id="@+id/button4" />
+
     <TextView
         android:text="@string/userPlaceholder"
         android:textSize="24sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="46dp"
         android:id="@+id/userTextView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
@@ -24,6 +63,7 @@
         app:srcCompat="@drawable/dummyprofile"
         android:contentDescription="@string/profileImage"
         android:id="@+id/profileImageView"
+        android:layout_marginTop="12dp"
         android:layout_below="@+id/userTextView"
         android:layout_centerHorizontal="true" />
 
@@ -32,8 +72,29 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/locationTextView"
+        android:layout_marginTop="15dp"
         android:layout_below="@+id/profileImageView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="6dp" />
+        android:layout_centerHorizontal="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:ems="10"
+        android:layout_marginBottom="7dp"
+        android:id="@+id/editText"
+        android:layout_above="@+id/button4"
+        android:layout_toRightOf="@+id/locationTextView"
+        android:layout_toEndOf="@+id/locationTextView" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:id="@+id/editText3"
+        android:layout_alignBaseline="@+id/editText"
+        android:layout_alignBottom="@+id/editText" />
 
 </RelativeLayout>
