--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -48,6 +48,7 @@
             android:layout_height="wrap_content"
             android:background="@android:color/white"
             android:hint="@string/zip_code"
+            android:inputType="number"
             android:nextFocusDown="@+id/emailEditText"
             android:padding="10dp"
             android:layout_marginBottom="10dp"
