--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -7,44 +7,79 @@
     android:layout_height="match_parent"
     tools:context="com.mehequanna.gitawesome.ui.UserActivity">
 
-    <Button
-        android:text="Button"
+    <EditText
+        android:id="@+id/zipEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/button"
-        android:layout_centerHorizontal="true"
+        android:background="@color/colorSecondaryDarkBackground"
+        android:textColorHint="@color/colorIcons"
+        android:padding="10dp"
+        android:inputType="number"
+        android:hint="@string/searchZip"
+        android:textAlignment="center"
+        android:layout_marginLeft="25dp"
+        android:layout_marginStart="25dp"
+        android:layout_alignBaseline="@+id/languageEditText"
+        android:layout_alignBottom="@+id/languageEditText"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:id="@+id/languageEditText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:hint="@string/searchLanguage"
+        android:background="@color/colorDarkBackground"
+        android:textColorHint="@color/colorIcons"
+        android:padding="10dp"
+        android:textAlignment="center"
+        android:layout_marginRight="14dp"
+        android:layout_marginEnd="14dp"
         android:layout_marginBottom="11dp"
-        android:id="@+id/button2" />
+        android:layout_above="@+id/searchGitButton"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <Button
-        android:text="Button"
+        android:id="@+id/savedGithubButton"
+        android:text="@string/saved_gits"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:id="@+id/button"
         android:layout_alignParentBottom="true"
-        android:layout_alignLeft="@+id/button2"
-        android:layout_alignStart="@+id/button2" />
+        android:layout_alignLeft="@+id/searchGitButton"
+        android:layout_alignStart="@+id/searchGitButton"
+        android:layout_alignRight="@+id/searchGitButton"
+        android:layout_alignEnd="@+id/searchGitButton" />
 
     <Button
-        android:text="Button"
+        android:text="@string/searchMeetupButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/button2"
-        android:layout_toLeftOf="@+id/profileImageView"
-        android:layout_toStartOf="@+id/profileImageView"
-        android:layout_marginRight="17dp"
-        android:layout_marginEnd="17dp"
-        android:id="@+id/button3" />
+        android:id="@+id/searchMeetupButton"
+        android:layout_below="@+id/languageEditText"
+        android:layout_alignLeft="@+id/zipEditText"
+        android:layout_alignStart="@+id/zipEditText" />
 
     <Button
-        android:text="Button"
+        android:text="@string/saved_meetups"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/button3"
-        android:layout_toRightOf="@+id/userTextView"
-        android:layout_toEndOf="@+id/userTextView"
-        android:id="@+id/button4" />
+        android:id="@+id/savedMeetupsButton"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/searchMeetupButton"
+        android:layout_alignEnd="@+id/searchMeetupButton"
+        android:layout_alignLeft="@+id/searchMeetupButton"
+        android:layout_alignStart="@+id/searchMeetupButton" />
+
+    <TextView
+        android:text="@string/locationPlaceholder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/locationTextView"
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/profileImageView"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:text="@string/userPlaceholder"
@@ -52,7 +87,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:layout_marginTop="46dp"
+        android:layout_marginTop="74dp"
         android:id="@+id/userTextView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
@@ -63,38 +98,18 @@
         app:srcCompat="@drawable/dummyprofile"
         android:contentDescription="@string/profileImage"
         android:id="@+id/profileImageView"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="22dp"
         android:layout_below="@+id/userTextView"
         android:layout_centerHorizontal="true" />
 
-    <TextView
-        android:text="@string/locationPlaceholder"
+    <Button
+        android:id="@+id/searchGitButton"
+        android:text="@string/searchGitButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/locationTextView"
-        android:layout_marginTop="15dp"
-        android:layout_below="@+id/profileImageView"
-        android:layout_centerHorizontal="true" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text="Name"
-        android:ems="10"
-        android:layout_marginBottom="7dp"
-        android:id="@+id/editText"
-        android:layout_above="@+id/button4"
+        android:layout_above="@+id/savedGithubButton"
         android:layout_toRightOf="@+id/locationTextView"
         android:layout_toEndOf="@+id/locationTextView" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        android:ems="10"
-        android:id="@+id/editText3"
-        android:layout_alignBaseline="@+id/editText"
-        android:layout_alignBottom="@+id/editText" />
 
 </RelativeLayout>
