--- a/app/src/main/res/layout/fragment_gits_detail.xml
+++ b/app/src/main/res/layout/fragment_gits_detail.xml
@@ -72,6 +72,7 @@
                     android:layout_height="wrap_content"
                     android:text="Created On:"
                     android:id="@+id/createdTextView"
+                    android:drawableLeft="@drawable/ic_create_black_24dp"
                     android:drawablePadding="4dp"
                     android:textColor="@color/colorPrimaryText"
                     android:textSize="15sp"
@@ -83,6 +84,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Updated On:"
+                    android:drawableLeft="@drawable/ic_update_black_24dp"
                     android:id="@+id/updatedTextView"
                     android:drawablePadding="4dp"
                     android:textColor="@color/colorPrimaryText"
