--- a/app/src/main/res/layout/gits_list_item.xml
+++ b/app/src/main/res/layout/gits_list_item.xml
@@ -30,17 +30,17 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Created"
-            android:id="@+id/repoCreatedTextView"
+            android:text="Description"
+            android:id="@+id/repoDescriptionTextView"
             android:layout_below="@+id/repoNameTextView"
             android:textStyle="italic"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Updated"
-            android:id="@+id/repoUpdatedTextView"
-            android:layout_below="@+id/repoCreatedTextView"
+            android:text="Created"
+            android:id="@+id/repoCreatedTextView"
+            android:layout_below="@+id/repoDescriptionTextView"
             android:textStyle="italic"/>
 
         <RelativeLayout
