--- a/app/src/main/res/menu/menu_user.xml
+++ b/app/src/main/res/menu/menu_user.xml
@@ -13,8 +13,6 @@
         android:id="@+id/action_change_user"
         app:showAsAction="always"
         app:actionViewClass="android.support.v7.widget.SearchView"
-        android:icon="@drawable/ic_face_white_24dp"
-        android:title="@string/change_username">
-    </item>
+        android:title="@string/change_username"/>
 
 </menu>
