--- a/app/src/main/res/menu/menu_user.xml
+++ b/app/src/main/res/menu/menu_user.xml
@@ -10,6 +10,12 @@
         app:showAsAction="never" />
 
     <item
+        android:id="@+id/action_help"
+        android:title="@string/help"
+        android:visible="true"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/action_change_user"
         app:showAsAction="always"
         app:actionViewClass="android.support.v7.widget.SearchView"
